<resources>
    <string name="app_name">Healthscribe</string>
    <string name="tv_titulo">Healthscribe</string>
    <string name="b_inicio_sesion">Iniciar sesión</string>
    <string name="b_inicio_registro">Registrarse</string>
    <string name="tv_registro">Crear cuenta</string>
    <string name="txt_nombre">Nombre</string>
    <string name="txt_apellidos">Apellidos</string>
    <string name="txt_dni">DNI</string>
    <string name="txt_email">Email</string>
    <string name="txt_direccion">Dirección</string>
    <string name="txt_telefono">Teléfono</string>
    <string name="txt_cont">Contraseña</string>
    <string name="b_registro">Registrarse</string>
    <string name="tv_login">Login</string>
    <string name="tv_menu">Menú</string>
    <string name="b_crear_medico">Crear médico</string>
    <string name="b_usuarios">Usuarios</string>
    <string name="b_medicamentos">Medicamentos</string>
    <string name="b_enfermedades">Enfermedades</string>
    <string name="b_alergias">Alergias</string>
    <string name="b_incompatibilidades">Incompatibilidades</string>
    <string name="b_perfil">Perfil</string>
    <string name="tv_registro_med">Crear médico</string>
    <string name="b_registro_med">Crear</string>
    <string name="tv_perfil">Perfil</string>
    <string name="b_cerrar">Cerrar sesión</string>
    <string name="b_modificar">Modificar</string>
    <string name="b_tratamientos">Tratamientos</string>
    <string name="b_alarmas">Alarmas</string>
    <string name="b_historia">Historia clínica</string>
    <string name="b_pacientes">Pacientes</string>
    <string name="b_introducir">Introducir</string>
    <string name="b_crear">Crear</string>
    <string name="tv_crear_medicamento">Crear medicamento</string>
    <string name="txt_descr_medicam">Descripción</string>
    <string name="txt_efectos_medicam">Efectos adversos</string>
    <string name="tv_crear_enferm">Crear enfermedad</string>
    <string name="txt_sintomas_enferm">Síntomas</string>
    <string name="b_crear_alergia">Crear alergia</string>
    <string name="b_eliminar">Eliminar</string>
    <string name="tv_crear_incompatibilidad">Crear incompatibilidad</string>
    <string name="b_lista_medicamentos">Medicamentos</string>
    <string name="b_lista_enfermedades">Enfermedades</string>
    <string name="b_lista_alergias">Alergias</string>
    <string name="b_cancelar">Cancelar</string>
    <string name="b_siguiente">Siguiente</string>
    <string name="b_med_spinner">Medicamento</string>
    <string name="tv_selec_med_inc">Selecciona Medicamento</string>
    <string name="b_opc_tratamientos">Recetar Tratamiento</string>
    <string name="tv_trat_historia">Tratamientos</string>
    <string name="txt_fecha_inicio">Fecha de inicio</string>
    <string name="txt_fecha_fin">Fecha de fin</string>
    <string name="txt_motivo">Motivo</string>
    <string name="txt_incomp_med">Si selecciona algún medicamento pulse el botón Introducir, si no pulse el botón Siguiente</string>
    <string name="txt_incomp_enf">Si selecciona alguna enfermedad pulse el botón Introducir, si no pulse el botón Siguiente</string>
    <string name="txt_incomp_aler">Si selecciona alguna alergia pulse el botón Introducir, si no pulse el botón Siguiente</string>
    <string name="txt_asignacion">Asignación tratamiento</string>
</resources>